--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 p {
   color: darkblue;
+}
+
+h1 {
+  text-align: center;
+  color: brown;
+  font-family: "Trebuchet MS";
+  /*background-color: burlywood;*/
+}
+
+.order-title {
+  background-image: url("./images/burger-background-small.jpg");
+  height: 427px;
+  width: 640px;
+  margin: auto;
+  vertical-align: middle;
+  line-height: 427px;
 }
